--- a/templates/components/layouts/base.html
+++ b/templates/components/layouts/base.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="{% static 'css/output.css' %}">
 
     <script type="text/javascript" src="{% static 'admin/js/vendor/jquery/jquery.js' %}"></script>
+    <script src="https://unpkg.com/@zumer/snapdom/dist/snapdom.js"></script>
+
 </head>
 <body>
 
