--- a/templates/apps/monitoreo_servicios/reporte.html
+++ b/templates/apps/monitoreo_servicios/reporte.html
@@ -19,6 +19,10 @@
                 <button class="btn btn-primary" onclick="generarReporte()">
                     Generar Reporte
                 </button>
+
+                <button class="btn btn-secondary" onclick="descargarReporte()">
+                    Descargar Reporte
+                </button>
             </div>
 
         </div>
@@ -43,6 +47,12 @@
     </div>
 
     <script>
+        async function descargarReporte() {
+            const slides_container = document.getElementById('slides');
+            const result = await snapdom(slides_container);
+            await result.download({format: 'png', filename: 'reporte.png'});
+        }
+
         async function generarReporte() {
             const slides_container = document.getElementById('slides');
 
