--- a/templates/daisyui5/field.html
+++ b/templates/daisyui5/field.html
@@ -31,7 +31,7 @@
 
     {% if not field|is_checkboxselectmultiple and not field|is_radioselect %}
         {% if field|is_checkbox and form_show_labels %}
-            <div class=" flex items-center justify-center">
+            <div class="flex items-center justify-start">
                 <div>
                     {% if field.errors %}
                         {% crispy_field field 'class' 'checkbox checkbox-error' %}
