--- a/templates/icons_safelist.html
+++ b/templates/icons_safelist.html
@@ -2,3 +2,4 @@
 <span class="icon-[fluent--book-contacts-28-filled]"></span>
 <span class="icon-[hugeicons--stationery]"></span>
 <span class="icon-[healthicons--human-resoruces]"></span>
+<span class="icon-[ion--construct]"></span>
