--- a/templates/components/layouts/base.html
+++ b/templates/components/layouts/base.html
@@ -1,4 +1,4 @@
-{% load static %}
+{% load static django_htmx %}
 <!DOCTYPE html>
 <html lang="es" data-theme="{{ user.contacto.empresa.theme|default:'dos_plazas' }}">
 <head>
@@ -7,16 +7,28 @@
     <title>Intranet Corporativo UNE {% if title %}
         | {{ title }}
     {% endif %} </title>
+    {% htmx_script %}
+
     <link rel="stylesheet" href="{% static 'css/output.css' %}">
+
 
     <script type="text/javascript" src="{% static 'admin/js/vendor/jquery/jquery.js' %}"></script>
     <script src="https://unpkg.com/@zumer/snapdom/dist/snapdom.js"></script>
 
 </head>
-<body>
+<body hx-headers='{"x-csrftoken": "{{ csrf_token }}"}'>
 
 
 {{ slot }}
+
+<script>
+    document.addEventListener('htmx:afterSettle', () => {
+        const selects = document.querySelectorAll('[data-autocomplete-light-function="select2"]');
+        selects.forEach((select) => {
+            select.classList.add('hidden');
+        });
+    });
+</script>
 
 <link href="{% static 'admin/css/vendor/select2/select2.css' %}" media="screen" rel="stylesheet">
 <link href="{% static 'admin/css/autocomplete.css' %}" media="screen" rel="stylesheet">
